--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -4,6 +4,14 @@
   flex-direction: column;
   margin-top: 25px;
 }
+
+.footer__button-container {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+
+
 @media screen and (min-width: 768px) {
   .footer__container {
     display: flex;
@@ -33,20 +41,7 @@
   margin-top: 25px;
   padding: 0 0 5px 10px;
 }
-@media screen and (min-width: 414px) {
-  .footer__copyright {
-    font-size: 20px;
-  }
-}
-@media screen and (min-width: 800px) {
-  .footer__copyright {
-    font-size: 26px;
-  }
-}
-.footer__copyright-link {
-  padding: 0 0 0 5px;
-  width: 80px;
-}
+
 @media screen and (min-width: 414px) {
   .footer__copyright-link {
     width: 120px;
