--- a/src/components/YouTubeLite/youtubelite.css
+++ b/src/components/YouTubeLite/youtubelite.css
@@ -2,11 +2,12 @@
   background-position: 50%;
   background-repeat: no-repeat;
   background-size: cover;
-  min-height: 100%;
-  min-width: 100%;
+  margin: 0 auto;
+  width: 100%;
+  height: 40vh;
 }
 
-.youtube-lite{
+.youtube-lite {
   position: relative;
   cursor: pointer;
 }
@@ -27,9 +28,7 @@
 
 @media screen and (min-width: 768px) {
   .info__video {
-    height: 350px;
-    margin: 0 auto;
-    min-width: 100%;
+    height: 80vh;
   }
 }
 
